--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,16 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+/*   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* font-family: 'Andada Pro', serif;  */
+  font-family: 'Alegreya', serif;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Logo */
+.logo-font{
+  font-family: 'Concert One', cursive;
+  font-size: 30px;
+}
+
+
+/* AQUA */
+.color-dark{
+  color: #0B698B;
+}
+.color-light{
+  color: #C6EFF9;
+}
+.color-main{
+  color: #0396A6;
+}
+.color-minor{
+  color: #64C3ED;
+
+}
+.bg-color-dark{
+  background-color: #0B698B;
+}
+.bg-color-light{
+  background-color: #C6EFF9;
+}
+.bg-color-main{
+  background-color: #0396A6;
+}
+.bg-color-minor{
+  background-color: #64C3ED;
+
 }
