--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
 
+:root{
+  --dark: #0B698B;
+  --light: #C6EFF9;
+  --main: #0396A6;
+  --secondary: #64C3ED;
+}
+
 body {
   margin: 0;
 /*   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -32,28 +39,34 @@ code {
 
 /* AQUA */
 .color-dark{
-  color: #0B698B;
+  color: var(--dark)
 }
 .color-light{
-  color: #C6EFF9;
+  color: var(--light)
 }
 .color-main{
-  color: #0396A6;
+  color: var(--main)
 }
-.color-minor{
-  color: #64C3ED;
+.color-secondary{
+  color: var(--secondary)
 
 }
 .bg-color-dark{
-  background-color: #0B698B;
+  background-color: var(--dark)
 }
 .bg-color-light{
-  background-color: #C6EFF9;
+  background-color: var(--light)
 }
 .bg-color-main{
-  background-color: #0396A6;
+  background-color: var(--main)
 }
-.bg-color-minor{
-  background-color: #64C3ED;
+.bg-color-secondary{
+  background-color: var(--secondary)
 
+}
+
+/* button */
+.btn-style{
+  color: var(--light);
+  background-color: var(--dark);
 }
