--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,23 @@ code {
   color: var(--light);
   background-color: var(--dark);
 }
+
+/*.slider-wrapper{
+  display: flex;
+  height: 100%;
+}*/
+
+.slider-box{
+  flex-grow: 1;
+  flex-basis: 0;
+  transition: 0.5s ease-in-out;
+}
+.slider-box:hover{
+  flex-basis: 30%;
+}
+.slider-box img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease-in-out;
+}
