--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root{
   --dark: #0B698B;
@@ -21,7 +23,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* font-family: 'Andada Pro', serif;  */
-  font-family: 'Alegreya', serif;
+  /*font-family: 'Alegreya', serif;*/
+  font-family: 'Ubuntu', sans-serif;
+
 
 }
 
@@ -71,22 +75,65 @@ code {
   background-color: var(--dark);
 }
 
-/*.slider-wrapper{
-  display: flex;
-  height: 100%;
+/*Navigation bar*/
+/*.navigation{
+filter: drop-shadow(0.4rem 0.4rem 0.45rem rgba(0, 0, 30, 0.5));
+
 }*/
 
+
+/*Banner slider*/
 .slider-box{
   flex-grow: 1;
   flex-basis: 0;
-  transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out 0.3s;
+  position: relative;
 }
+.slider-box::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  /*background-color: rgba(0, 0, 0, 0.4);*/
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0) 60%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  opacity: 1;
+  transition: opacity .3s ease-in-out 0.3s;
+}
+
+.slider-box:hover::after{
+  opacity: 0;
+}
+
 .slider-box:hover{
-  flex-basis: 30%;
+  flex-basis: 20%;
 }
+
+.slider-text{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #ffffff;
+  z-index: 1;
+  padding: 25px 0;
+}
+.slider-box:hover .slider-text{
+  display: none;
+}
+
+.slider-text p span{
+  font-family: 'Satisfy', cursive;
+}
+
 .slider-box img{
   object-fit: cover;
   width: 100%;
   height: 100%;
-  transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out 0.3s;
 }
