--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,6 +69,11 @@ code {
 
 }
 
+/*subtitle styles*/
+.subtitle{
+  font-family: 'Satisfy', cursive;
+}
+
 /* button */
 .btn-style{
   color: var(--light);
@@ -97,6 +102,7 @@ filter: drop-shadow(0.4rem 0.4rem 0.45rem rgba(0, 0, 30, 0.5));
   width: 100%;
   height: 100%;
   /*background-color: rgba(0, 0, 0, 0.4);*/
+
   background-image: linear-gradient(
     to top,
     rgba(0, 0, 0, 0.8),
@@ -136,4 +142,12 @@ filter: drop-shadow(0.4rem 0.4rem 0.45rem rgba(0, 0, 30, 0.5));
   width: 100%;
   height: 100%;
   transition: 0.5s ease-in-out 0.3s;
+}
+
+/*place*/
+.place-content{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.65), transparent);
 }
