--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -23,9 +24,10 @@ body {
 *{
 	margin: 0;
 	box-sizing: border-box;
-  font-family: 'Alegreya', sans-serif;
   font-size: 16px;
-  font-weight: normal;
+  font-family: 'Alegreya', serif;
+  /* font-family: 'Alegreya Sans', sans-serif; */
+  /* font-weight: normal; */
 }
 
 blockquote,
