--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;1,100;1,300;1,400;1,500;1,700;1,800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -19,15 +19,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-/* Common CSS */
+/* Reset CSS */
 *{
 	margin: 0;
 	box-sizing: border-box;
-  font-size: 16px;
-  font-family: 'Alegreya', serif;
-  /* font-family: 'Alegreya Sans', sans-serif; */
-  /* font-weight: normal; */
+  font-size: 18px;
+  font-weight: 400;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 
 blockquote,
@@ -94,8 +92,20 @@ fieldset{
 input:focus{
   background-color: "#fff"
 }
+/* input placeholder */
+input::placeholder {
+  color: var(--darkGray);
+  opacity: 1; /* Firefox */
+}
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+ color: #848484;
+}
+input::-ms-input-placeholder { /* Microsoft Edge */
+  color: #848484;
+}
 
-/* AQUA */
+/* Common CSS */
+
 .color-dark{
   color: var(--dark)
 }
@@ -112,7 +122,6 @@ input:focus{
   color:  var(--darkGray);
 }
 
-
 .bg-color-dark{
   background-color: var(--dark)
 }
@@ -124,21 +133,23 @@ input:focus{
 }
 .bg-color-secondary{
   background-color: var(--secondary)
-
+}
+.typography-logo{
+  font-family: 'Alegreya', serif;
+}
+.typography-body{
+  font-family: 'Alegreya Sans', sans-serif;
+}
+.typography-heading, .typography-title, .typography-subtitle{
+  font-family: 'Alegreya', serif;
+}
+.typography-caption{
+  font-family: 'Satisfy', cursive;
+}
+.article-text-color{
+  color: #5e5e5e;
 }
 
-
-/* input placeholder */
-input::placeholder {
-  color: var(--darkGray);
-  opacity: 1; /* Firefox */
-}
-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
- color: #848484;
-}
-input::-ms-input-placeholder { /* Microsoft Edge */
-  color: #848484;
-}
 
 
 /* Banner */
@@ -176,4 +187,22 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   bottom: 0;
   width: 100%;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+}
+
+/* blogs page */
+.pagination{
+    margin-top: 20px;
+
+}
+.pagination button{
+    background-color: transparent;
+    padding: 0.375rem 0.75rem;
+    margin: 0 4px;
+    border-radius: 0.25rem;
+    outline:none;
+    border:none;
+}
+.pagination .selected{
+    background-color: red;
+    color: #fff;
 }
