--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;1,100;1,300;1,400;1,500;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -9,7 +11,7 @@
 :root{
   --dark: #0B698B;
   --light: #C6EFF9;
-  --main: #0396A6;
+  --main: #3fd0d4;
   --secondary: #64C3ED;
   --darkGray: #848484;
 }
@@ -18,14 +20,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
 }
 /* Reset CSS */
 *{
 	margin: 0;
 	box-sizing: border-box;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: 'Alegreya Sans', sans-serif;
 }
 
 blockquote,
@@ -134,7 +134,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 .bg-color-secondary{
   background-color: var(--secondary)
 }
-.typography-logo{
+/* .typography-logo{
   font-family: 'Alegreya', serif;
 }
 .typography-body{
@@ -142,7 +142,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 }
 .typography-heading, .typography-title, .typography-subtitle{
   font-family: 'Alegreya', serif;
-}
+} */
 .typography-caption{
   font-family: 'Satisfy', cursive;
 }
@@ -175,7 +175,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 
 /*Navigation bar*/
 .nav-styles{
-  background-color: var(--main)
+  /* background-color: var(--main) */
 	/* background-color: rgba(100%, 100%, 100%, 5%); */
 	/* backdrop-filter: blur(50px); */
 }
