--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 :root{
   --dark: #0B698B;
   --light: #C6EFF9;
-  --main: #3fd0d4;
+  --main: #37b8bd;
   --secondary: #64C3ED;
   --darkGray: #848484;
 }
@@ -105,7 +105,6 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 /* Common CSS */
-
 .color-dark{
   color: var(--dark)
 }
