--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;1,100;1,300;1,400;1,500;1,700;1,800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
@@ -26,6 +23,7 @@ body {
 *{
 	margin: 0;
 	box-sizing: border-box;
+  line-height: 1.5;
 }
 
 blockquote,
@@ -95,6 +93,8 @@ input:focus{
 /* input placeholder */
 input::placeholder {
   color: var(--darkGray);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
   opacity: 1; /* Firefox */
 }
 input:-ms-input-placeholder { /* Internet Explorer 10-11 */
@@ -142,6 +142,9 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 .typography-heading, .typography-title, .typography-subtitle{
   font-family: 'Alegreya', serif;
 } */
+.typography-body{
+  font-family: 'Montserrat', sans-serif;
+}
 .typography-caption{
   font-family: 'Satisfy', cursive;
 }
